# stm32f1-usb-gofast

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Kconfig  README.md  prj.conf  pyproject.toml  west.yml
boards/: stm32_min_dev_blue.overlay
src/: main.c  usb.c
