[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=76.1.0", "setuptools-scm>=8.2.0"]

[project]
authors = [
  {name = "Jevin Sweval", email = "jevinsweval@gmail.com"}
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "attrs>=25.3.0",
  "cattrs>=24.1.3",
  "path>=17.1.0",
  "portion>=2.6.0",
  "rich>=13.9.4",
  "simplejson>=3.20.1",
  "z3-solver>=4.14.1.0"
]
description = "Python bindings and utilities for instruction decoding research"
dynamic = ["version"]
keywords = ["instruction decoding", "disassembly", "disassembler"]
license = {text = "BSD-2-Clause"}
name = "instdec"
readme = {file = 'README.md', content-type = 'text/markdown'}
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pre-commit>=4.2.0",
  "ruff>=0.9.7",
  "ssort>=0.14.0"
]

[project.scripts]
instdec-py-util = "instdec.tools.instdec_util:main"
instdec-py-z3 = "instdec.tools.instdec_z3:main"

[project.urls]
repository = "https://github.com/jevinskie/instruction-decoding-optimization-research"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.setuptools]
package-dir = {"" = "python/src"}

[tool.setuptools.dynamic]
version = {attr = "instdec._version.__version__"}

[tool.setuptools_scm]
version_file = "python/src/instdec/_version.py"
